--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+body {
+    margin: auto;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.center-box {
+    height: 200px;
+    width: 200px;
+    background-color: lightblue;
+    border: 2px solid black;
+    display: flex; /* Center text inside the box */
+    justify-content: center; /* Horizontally center */
+    align-items: center; /* Vertically center */
+    color: purple; /* Text color */
+    font-size: 20px; /* Font size */
+}
